Fixed the overflow issues On the nav bar.

--- a/main.scss
+++ b/main.scss
@@ -28,6 +28,7 @@ $font-header: "Montserrat", sans-serif;
 body {
   min-height: 100vh;
   line-height: 1.5;
+  background-color: $color-darkest;
 }
 
 /* Make images easier to work with */
@@ -100,13 +101,15 @@ footer {
     .navbar__links {
         display: flex;
         justify-content: space-around;
-        align-items: center;        
+        align-items: center;                
         padding-top: 5px;
         height: 100%;
         width: 50%;
 
         a {
             text-decoration: none;
+            font-size: .9rem;
+            padding-left: .5rem;
             color: $color-lightest;
             font-family: $font-content;
 
@@ -151,6 +154,7 @@ footer {
 
     h2 {
         text-align: center;
+        font-size: 2.5rem;
         padding: 3rem;
         font-family: $font-header;
     }
@@ -182,8 +186,9 @@ footer {
 
     .projects__header {
         text-align: center;
-        font-size: 2rem;
+        font-size: 2.5rem;
         font-family: $font-header;
+        font-weight: bold;
         padding: 2rem;
     }
 
@@ -212,20 +217,18 @@ footer {
                 margin: .3rem .3rem 1.5rem;
                 padding: .2rem;
                 border: $color-light solid 1px;
-                // box shadow params are horzontal/verticle/blur/color
-                // (new syntax, but is transparent black)
+                // box shadow arguments are horzontal/verticle/blur/color                
                 box-shadow: 0 .25rem 1rem rgb(0 0 0 / .5);
 
-                .card__title {
-                    text-align: center;
-                    padding: .5rem;
+                .card__title {                    
+                    padding: .3rem 0rem;
+                    font-size: 1.5rem;
                     font-family: $font-header;
 
                 }
 
-                card__description {
-                    padding: .3rem;
-                    
+                card__description {                    
+                    padding: 0 .5rem;                    
                 }
 
                 .card__code, 
